--- a/en.html
+++ b/en.html
@@ -1,29 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>VšĮ "Įvairi media"</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body class="font-sans bg-gray-100 text-gray-800">
-    <div class="container mx-auto max-w-screen-sm">
-        <header class="text-center my-8">
-            <h1 class="text-4xl font-bold  mb-2">VšĮ "Įvairi media"</h1>
-            <p class="text-lg">We organize the annual international <a href="https://pycon.lt" class="text-blue-500 hover:text-blue-700" target="_blank">PyCon Lithuania</a> conference.</p>
-        </header>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body class="font-sans text-gray-800 bg-gray-100">
+    <div class="container max-w-screen-sm mx-auto">
+      <header class="my-8 text-center">
+        <h1 class="mb-2 text-4xl font-bold">VšĮ "Įvairi media"</h1>
+        <p class="text-lg">
+          We organize the annual international
+          <a href="https://pycon.lt" class="text-blue-500 hover:text-blue-700" target="_blank">PyCon Lithuania</a>
+          conference.
+        </p>
+      </header>
 
-        <section class="info-section bg-white p-6 rounded-lg shadow-md" id="info">
-            <h2 class="text-2xl font-semibold mb-4">Details</h2>
-            <div class="mb-2">Name: VšĮ "Įvairi media"</div>
-            <div class="mb-2">Company code: 302618824</div>
-            <div class="mb-2">Email: <a href="mailto:info@ivairimedia.com" class="text-blue-500 hover:text-blue-700">info@ivairimedia.com</a></div>
-            <div class="mb-2">Phone number: +370 641 39571</div>
-            <div class="mb-4">VAT code: LT100016529313</div>
-            <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" onclick="copyInfo('info')">Copy info</button>
-        </section>
+      <section class="p-6 bg-white rounded-lg shadow-md info-section" id="info">
+        <h2 class="mb-4 text-2xl font-semibold">Details</h2>
+        <div class="mb-2">Name: VšĮ "Įvairi media"</div>
+        <div class="mb-2">Company code: 302618824</div>
+        <div class="mb-2">
+          Email:
+          <a href="mailto:info@ivairimedia.com" class="text-blue-500 hover:text-blue-700">info@ivairimedia.com</a>
+        </div>
+        <div class="mb-2">Phone number: +370 641 39571</div>
+        <div class="mb-4">VAT code: LT100016529313</div>
+        <button
+          class="flex items-center px-4 py-2 font-bold text-white bg-green-500 rounded item hover:bg-green-700"
+          onclick="copyInfo('info')"
+        >
+          Copy info
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="inline w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.666 3.888A2.25 2.25 0 0 0 13.5 2.25h-3c-1.03 0-1.9.693-2.166 1.638m7.332 0c.055.194.084.4.084.612v0a.75.75 0 0 1-.75.75H9a.75.75 0 0 1-.75-.75v0c0-.212.03-.418.084-.612m7.332 0c.646.049 1.288.11 1.927.184 1.1.128 1.907 1.077 1.907 2.185V19.5a2.25 2.25 0 0 1-2.25 2.25H6.75A2.25 2.25 0 0 1 4.5 19.5V6.257c0-1.108.806-2.057 1.907-2.185a48.208 48.208 0 0 1 1.927-.184"
+              />
+            </svg>
+          </div>
+        </button>
+      </section>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
