Add english address

--- a/en.html
+++ b/en.html
@@ -25,6 +25,7 @@
           Email:
           <a href="mailto:info@ivairimedia.com" class="text-blue-500 hover:text-blue-700">info@ivairimedia.com</a>
         </div>
+        <div class="mb-2">Address: Birzelio 23-iosios 8-19, Kaunas, LT-50423, Lithuania</div>
         <div class="mb-2">Phone number: +370 641 39571</div>
         <div class="mb-4">VAT code: LT100016529313</div>
         <button
