Update lithuanian address.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           El. paštas:
           <a href="mailto:info@ivairimedia.com" class="text-blue-500 hover:text-blue-700">info@ivairimedia.com</a>
         </div>
+        <div class="mb-2">Adresas: Birželio 23-iosios g. 8-19, Kaunas, LT-50423, Lietuva</div>
         <div class="mb-2">Telefono numeris: +370 641 39571</div>
         <div class="mb-4">PVM kodas: LT100016529313</div>
         <button
